--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Prime Modifications</title>
@@ -34,6 +29,7 @@
 								<li><a href="#intro">About</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="store.prime-modifications.tk" target="_blank">Store</a></li>
+								<li><a href="docs.prime-modifications.tk" target="_blank">Docs</a></li>
 								<li><a href="dc.prime-modifications.tk" target="_blank">Discord</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
