--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 							<ul>
 								<li><a href="#intro">About</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="store.prime-modifications.tk" target="_blank">Store</a></li>
-								<li><a href="docs.prime-modifications.tk" target="_blank">Docs</a></li>
-								<li><a href="dc.prime-modifications.tk" target="_blank">Discord</a></li>
+								<li><a href="https://store.prime-modifications.tk" target="_blank">Store</a></li>
+								<li><a href="https://docs.prime-modifications.tk" target="_blank">Docs</a></li>
+								<li><a href="https://dc.prime-modifications.tk" target="_blank">Discord</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
