fixed discord links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									•	Exclusive products.<br>
 									•	Media Creation Services<br><br>
 
-									If you require any assistance or advice on your purchase, please contact us via discord.
+									If you require any assistance or advice on your purchase, please contact us via our <a href="https://dc.prime-modifications.tk" target="_blank">Discord.</a>
 								</p>
 							</article>
 
@@ -66,7 +66,7 @@
 								<h2 class="major">Portfolio</h2>
 								<span class="image main"><img src="images/img.png" alt="" /></span>
 								<p>
-									We offer many premium modifications for FiveM. Here is a brief portfolio of what we have to offer. Visit our <a href="dc.prime-modifications.tk" target="_blank">Discord</a> for more.<br>
+									We offer many premium modifications for FiveM. Here is a brief portfolio of what we have to offer. Visit our <a href="https://dc.prime-modifications.tk" target="_blank">Discord</a> for more.<br>
 									<span class="image main"><img  width="400px" src="https://media.giphy.com/media/xFFbpgPT09cCu3rdYw/giphy.gif" draggable="false"></span>
 									<span class="image main"><img  width="400px" src="https://media.giphy.com/media/ED7kay0S3IyR55wvoK/giphy.gif" draggable="false"></span>
 									<span class="image main"><img  width="400px" src="https://media.discordapp.net/attachments/933001131997663263/1013443058706169946/unknown.png?width=1193&height=671" draggable="false"></span>
